fixing spacing in footer

--- a/css/custom.css
+++ b/css/custom.css
@@ -123,6 +123,8 @@ footer a
 	font-weight: bold;
 	text-decoration: none;
 	color: #333333;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 footer a:hover
@@ -235,7 +237,7 @@ div.padded-bottom
 	padding-bottom: 20px;
 }
 
-div.left { float: left; margin-right: 15px; }
+div.left { float: left; }
 div.right { float: right; }
 
 textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input, select, option
